--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,11 @@
 # Fixed Path Variables
-path: /home/cedric/Documents/HiWi/test/demultiplexed/
-ONTrun: ONTrun_054
-pathRef: /home/cedric/Documents/HiWi/test/ONTrun_54
-sampleNumber: 5
+path: /home/cedric/Documents/HiWi/ONTrun_059/ONTrun_059/demultiplexed/
+ONTrun: ONTrun_059
+pathRef: /home/cedric/Documents/HiWi/ONTrun_059/ONTrun_059/references
+nonDemultiplexed: /home/cedric/Documents/HiWi/ONTrun_059/ONTrun_059/non-demultiplexed/
+barcodeFile: /home/cedric/Documents/HiWi/ONTrun_059/ONTrun_059/IndexCombination_ONTrun_059.txt
+refMap: /home/cedric/Documents/HiWi/ONTrun_059/ONTrun_059/reference_map.yml
+concat_fasta_path : ""
 
 # Dynamically created paths using the above 
 pathFastq: "" 
